2003-10-02  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	Improve RPC XID handling.

	* amd/rpc_fwd.c (fwd_packet, fwd_reply): Always log xid.
	Convert xid to/from host/network byte order.

2003-10-02  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	Use NFS V2/V3 file handles instead of mount results.

	* include/am_utils.h (am_nfs_fhandle): Use NFS V2/V3 file handles
	only, not MOUNTPROC_MNT results.
	* amd/amfs_host.c (fetch_fhandle): Use local variables to store
	MOUNTPROC_MNT results.
	* amd/autil.c (amfs_mount): Use new am_nfs_fhandle_t.
	* amd/ops_nfs.c (struct fh_cache): New member fh_status.
	(got_nfs_fh): Use local variables to store MOUNTPROC_MNT results.
	Store MOUNTPROC_MNT errors in fh_status.
	(prime_nfs_fhandle_cache): Get fh_error from fh_status.
	* hlfsd/hlfsd.c (main): Use new am_nfs_fhandle_t.
	* libamu/mount_fs.c (compute_nfs_args): Copy NFS V2/V3 file
	handles straight from new am_nfs_fhandle_t.

2003-10-02  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* amd/clock.c (CID_ALLOC): Remove unused argument.
	(timeout): Likewise.

	* amd/ops_nfs.c (FHID_ALLOC): Remove unused argument.
	(prime_nfs_fhandle_cache): Likewise.
	(call_mountd): Use UDPMSGSIZE instead of magic constant.

	* amd/rpc_fwd.c (XID_ALLOC): Remove unused argument.
	(fwd_packet): Likewise.
	Handle TLOOK error from t_rcvudata().

2003-09-30  Ion Badulescu  <ionut@moisil.badula.org>

	* NEWS: updated

	* libamu/mount_fs.c (mount_fs): don't try to recreate the mount
	point if the mount fails with ENOENT: in the best case we would be
	papering over a bug, and in the worst case we could cause a
	deadlock (with autofs). If there are races, they need to be
	exposed and fixed properly.

	* conf/autofs/autofs_solaris_v1.h,
	  conf/autofs/autofs_solaris_v2_v3.h,
	  conf/autofs/autofs_linux.h: (AUTOFS_NFSX_FS_FLAGS): autofs
	semantics don't allow us to mount nfsx directly onto an autofs
	mountpoint, so disallow it

	* amd/amfs_nfsx.c (amfs_nfsx_match): more restrictive sanity check